tinyc/test/bad/true-redeclare-field.c
struct s
{
    int true;
};
int main()
{
    return 0;
}
